Bug 1247611 - Recreate GLTextureSources after changing compositors on Mac. r=mattwoodrow, a=ritu